@@ -220,4 +220,11 @@ public class XmlTreeBuilderTest {
 
         assertEquals("//\n\n  foo();\n//", doc.selectFirst("script").text());
     }
+
+    @Test
+    public void handlesDodgyXmlDecl() {
+        String xml = "<?xml version='1.0'><val>One</val>";
+        Document doc = Jsoup.parse(xml, "", Parser.xmlParser());
+        assertEquals("One", doc.select("val").text());
+    }
 }
