@@ -44,6 +44,9 @@ jsoup changelog
     space, which could impact the parse tree.
     <https://github.com/jhy/jsoup/issues/1003>
 
+  * Bugfix: when parsing an invalid XML declaration, the parse would fail.
+    <https://github.com/jhy/jsoup/issues/1015>
+
 *** Release 1.11.2 [2017-Nov-19]
   * Improvement: added a new pseudo selector :matchText, which allows text nodes to match as if they were elements.
     This enables finding text that is only marked by a "br" tag, for example.
